<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">


    <LinearLayout
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#09024d">

        <Button
            android:id="@+id/info"
            android:layout_width="125dp"
            android:layout_height="100dp"
            android:text="@string/threeBar" />

        <TextView
            android:layout_width="160dp"
            android:layout_height="60dp"
            android:text="@string/role"
            android:textAlignment="center"
            android:textSize="24sp"
            android:textColor="#FFFF"
            android:textStyle="bold" />

        <Button
            android:id="@+id/problem"
            android:layout_width="125dp"
            android:layout_height="100dp"
            android:text="@string/problem" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lowBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintBottom_toTopOf="@id/keyboard"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textSize="24sp"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/error"
            android:visibility="gone"
            android:textColor="#FFFF"
            android:background="#FF0000"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:textSize="24sp"
            android:textAlignment="center"
            android:gravity="center"
            android:text="@string/task" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="550dp"
            android:src="@drawable/qrcodee"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50sp"
            android:text="@string/next"
            android:background="#000000"
            android:textColor="@color/white"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/keyboard"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/lowBar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#9c9c9c"
        android:gravity="center">


        <EditText
            android:id="@+id/editText"
            android:layout_width="160dp"
            android:layout_height="match_parent"
            android:hint="Edit Here" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>